objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>CaseId__c</fullName>
        <description>This field is created as part of 2433 to stamp the case Id from while the unzipped file is pushed to salesforce from JAVA.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CaseId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Tracking_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Tracking ID</label>
        <referenceTo>Request_Tracking__c</referenceTo>
        <relationshipLabel>Content Versions</relationshipLabel>
        <relationshipName>Content_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Tracking_Name__c</fullName>
        <formula>Request_Tracking_ID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Tracking Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Status_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Response Status Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Response Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GlobalKey</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>